Docker, Kubernetes, Swarm/5. Kubernetes Hands On/25. Cert-manager. Настройка HTTPS. Wildcard сертификаты. DNS01 Challenge. AWS Route53/k8s/example-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
spec:
  ingressClassName: nginx # replacement of annotation: kubernetes.io/ingress.class: nginx
  tls:
    - hosts:
        - app-3.kubxr.com
      secretName: app-tls-3
  rules:
    - host: app-3.kubxr.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service-3
                port:
                  number: 80
